[KARAF-4985] Add test on Java version on karaf.bat to use the correct startup command